--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
     "react-leaflet": "^2.6.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
