--- a/package.json
+++ b/package.json
@@ -1,48 +1,24 @@
 {
-  "name": "covid-19",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "leaflet": "^1.6.0",
-    "moment": "^2.24.0",
-    "react": "^16.13.0",
-    "react-countup": "^4.3.3",
-    "react-dom": "^16.13.0",
-    "react-ga": "^2.7.0",
-    "react-leaflet": "^2.6.3",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-transition-group": "^4.3.0",
-    "recharts": "^1.8.5",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^7.0.2"
-  },
+  "name": "mern",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "nodemon server.js",
+    "install-client": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "client": "npm start --prefix ./client",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "dev": "NODE_ENV=development concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "concurrently": "^4.1.1",
+    "nodemon": "^1.18.10"
   }
 }
