--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
     "react-leaflet": "^2.6.3",
+    "react-leaflet-control": "^2.1.2",
+    "react-leaflet-easyprint": "^2.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -44,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
