--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1"
   },
   "devDependencies": {
